[package]
name = "icon_baker"
version = "3.2.0-beta.2"
authors = [
    "Thiago Brevidelli <thiago.brevidelli.garcia@protonmail.com>",
    "Nicolas Girard <girard.nicolas@gmail.com>"
]
edition = "2018"
description = "A simple solution for encoding common icon file formats."
license-file = "LICENSE"
repository = "https://github.com/GarkGarcia/icon_baker"
homepage = "https://github.com/GarkGarcia/icon_baker"
readme = "README.md"
keywords = ["icon", "ico", "icns"]

[dependencies]
tar = "0.4.26"
ico = "0.1.0"
icns = "0.3.0"
image = "0.22.1"
resvg = { version = "0.8.0", features = ["raqote-backend"] }