[package]
name = "ikon"
version = "0.1.0-beta.10"
authors = [
    "Gark Garcia <gark.garcia@protonmail.com>",
    "Nicolas Girard <girard.nicolas@gmail.com>"
]
edition = "2018"
description = "A robust, flexible Rust framework for creating encoders and decoders for various icon formats."
license = "MIT"
repository = "https://github.com/GarkGarcia/ikon"
homepage = "https://github.com/GarkGarcia/ikon"
readme = "README.md"
keywords = ["icon", "encode", "decode"]

[dependencies]
image = "0.22.3"
resvg = { version = "0.8.0", features = ["raqote-backend"] }